--- a/PersonalPortal/PersonalPortal/Style/Css/UnitTest.css
+++ b/PersonalPortal/PersonalPortal/Style/Css/UnitTest.css
@@ -1,10 +1,13 @@
 ﻿body {
-}
-
-body {
     width: 80%;
     margin: 10px auto;
     background: url('/Images/bg.png') 0 0 repeat #dedede;
+    padding: 0 !important;
+}
+
+*.modal-open {
+    overflow-y: auto;
+    padding-right: 0 !important;
 }
 
 .ng-cloak {
@@ -82,8 +85,14 @@ body {
                 width: 50px;
                 padding: 0;
                 margin-left: 10px;
-                border: 1px solid #ccc;
+                border: 1px solid rgba(45, 132, 204, 0.3);
+                color: #2d84cc;
+                background: #ebf3fb;
             }
+
+                .group-item .item-line .control button:hover {
+                    background-color: #e4ebf3;
+                }
 
 
 
@@ -121,7 +130,7 @@ body {
 
     .item-table td input {
         border: none;
-        box-shadow: 0px 0px 6px 1px #ddd inset;
+        background-color: #f6f6f6;
         width: 100%;
         height: 26px;
         margin: 0;
@@ -177,7 +186,7 @@ body {
 }
 
     .btn-right * {
-        margin: 0;
+        margin: 2px 0 0 0;
     }
 
 .control-group {
@@ -185,3 +194,53 @@ body {
     margin-top: 15px;
     padding-top: 5px;
 }
+
+.table-data {
+    margin-left: 20px;
+    width: calc(100% - 20px);
+}
+
+    .table-data th {
+        width: 150px;
+    }
+
+.modal-body {
+    font-size: 14px;
+}
+
+    .modal-body .title {
+        margin-bottom: 4px;
+    }
+
+    .modal-body .content {
+        margin-left: 5px;
+        background-color: #f0f0f0;
+        border-radius: 4px;
+        font-size: 12px;
+        padding: 10px 30px;
+    }
+
+.modal-footer .item-line {
+    text-align: left;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+}
+
+    .modal-footer .item-line .title {
+        width: 120px;
+        display: inline-table;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        margin-bottom: 5px;
+    }
+
+    .modal-footer .item-line .switch {
+        display: contents;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        background-color: #f6f6f6;
+        height: 26px;
+        padding: 2px 10px;
+    }
