--- a/PersonalPortal/PersonalPortal/Style/Css/ApiTest.css
+++ b/PersonalPortal/PersonalPortal/Style/Css/ApiTest.css
@@ -11,6 +11,7 @@ textarea {
     border-top: none !important;
     border-top-left-radius: 0 !important;
     border-top-right-radius: 0 !important;
+    min-height: 100px;
 }
 
 button {
